Fix footer bug on mobile screen.

--- a/_sass/base/_footer-at-bottom.scss
+++ b/_sass/base/_footer-at-bottom.scss
@@ -10,6 +10,6 @@ html, body {
   display: table-row;
   height: 100%;
 }
-footer {
+.footer {
   display: table-row;
 }
